Fix java.library.path parsing logic.